--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -54,29 +54,20 @@
         <div class="title">
           <h1>{{ .Page.Title }}</h1>
         </div>
-        {{ if site.Params.enableTags }}
-        <div class="taxonomy-terms">
-            <ul>
-            {{ range .Params.tags }}
-            {{ $url:= printf "tags/%s" . }}
-            <li class="rounded"><a href="{{ $url | urlize | relLangURL }}" class="btn, btn-sm">{{ . }}</a></li>
-            {{ end }}
-          </ul>
-        </div>
-        {{ end }}
+
         <div class="post-content" id="post-content">
           {{ .Page.Content }}
         </div>
 
         <!--- Improve this page button --->
-        {{ if site.Params.GitRepo }}
+        <!-- {{ if site.Params.GitRepo }}
           <div class="btn-improve-page">
               <a href="{{ site.Params.GitRepo }}/edit/{{ site.Params.GitBranch }}/content/{{ .File.Path }}" title="{{ i18n "improve_this_page" }}" target="_blank" rel="noopener">
                 <i class="fas fa-code-branch"></i>
                 {{ i18n "improve_this_page" }}
               </a>
           </div>
-        {{ end }}
+        {{ end }} -->
 
         <!---Next and Previous Navigator -->
       <hr />
