--- a/layouts/partials/cards/skill.html
+++ b/layouts/partials/cards/skill.html
@@ -14,9 +14,9 @@
         {{ end }}
         <h5 class="card-title">{{ .name }}</h5>
       </div>
-      <div class="card-body">
+      <!-- <div class="card-body">
         <p class="card-text">{{ .summary | markdownify }}</p>
-      </div>
+      </div> -->
     </div>
   </a>
 </div>
