--- a/layouts/partials/navigators/next-prev-navigator.html
+++ b/layouts/partials/navigators/next-prev-navigator.html
@@ -3,11 +3,7 @@
 {{ $nextPage := "" }}
 
 <!-- List all the pages. It uses the sidebar menu to discover the page order. -->
-{{ $pages := slice }}
-
-{{ if isset site.Menus "sidebar" }}
-  {{ $pages = partial "helpers/get-pages.html" site.Menus.sidebar }}
-{{ end }}
+{{ $pages := partial "helpers/get-pages.html" site.Menus.sidebar }}
 
 <!-- Now, find the current page index in the pages list. Then, find previous page and next page. -->
 {{ $idx := 0 }}
