--- a/layouts/partials/sections/about.html
+++ b/layouts/partials/sections/about.html
@@ -11,8 +11,7 @@
 <div class="container anchor p-lg-5 about-section" id="{{ $sectionID }}">
   <div class="row pt-sm-2 pt-md-4 align-self-center">
     <!-- summary -->
-    <!-- takes up full section width if no badges/soft skills are specified -->
-    {{ if or (.softSkills) (.badges) }} <div class="col-sm-6"> {{ else }} <div class="col-sm-12"> {{ end }}
+    <div class="col-sm-6">
       <h3 class="p-1">{{ $author.name }}</h3>
       {{ if .designation }}
       <h5 class="p-1">
@@ -47,17 +46,23 @@
       {{ end }}
     </div>
     <!-- soft skills circular-progressbar -->
-    <div class="col-sm-6 pt-5 pl-md-4 pl-sm-3 pt-sm-0">
-      <div class="row">
-        {{ range .badges }}
+    <div class="col-sm-6">
+      <!-- <div class="row"> -->
+        <h3 class="p-1">{{ .researchInterests.name }}</h3>
+        <p class="p-1 text-justify">
+          {{ .researchInterests.decs | markdownify }}
+        </p>
+
+
+        <!-- {{ range .badges }}
           {{ partial "misc/badge.html" . }}
-        {{ end }}
+        {{ end }} -->
         <!-- TODO: Remove this part in version v4+ -->
         <!-- Keep backward compatibility with old configuration -->
-        {{ range .softSkills }}
+        <!-- {{ range .softSkills }}
           {{ partial "misc/soft-skills.html" . }}
-        {{ end }}
-      </div>
+        {{ end }} -->
+      <!-- </div> -->
     </div>
   </div>
 </div>
