--- a/layouts/partials/sections/about.html
+++ b/layouts/partials/sections/about.html
@@ -46,7 +46,7 @@
       {{ end }}
     </div>
     <!-- soft skills circular-progressbar -->
-    <div class="col-sm-6">
+    <div class="col-sm-6" style="margin-top: 40px;">
       <!-- <div class="row"> -->
         <h3 class="p-1">{{ .researchInterests.name }}</h3>
         <p class="p-1 text-justify">
