--- a/static/css/layouts/main.css
+++ b/static/css/layouts/main.css
@@ -76,9 +76,9 @@ a:hover {
 }
 
 .btn-info {
-  background-color: #0e152b !important;
+  background-color: #4B6587 !important;
   color: #e5e9f2 !important;
-  border-color: #0e152b;
+  border-color: #4B6587;
 }
 
 .btn-info:hover {
