--- a/layouts/partials/sections/projects.html
+++ b/layouts/partials/sections/projects.html
@@ -8,13 +8,14 @@
     <h1 class="text-center">{{ .section.name }}</h1>
   {{ end }}
   <div class="container ml-auto text-center">
-    <div class="btn-group flex-wrap" role="group" id="project-filter-buttons">
+    <div class="btn-group  btn-group-sm" role="group" id="project-filter-buttons">
       {{ range .buttons }}
-      <button type="button" class="btn btn-dark" data-filter="{{ .filter }}">
+      <button type="button" class="btn btn-dark"  data-filter="{{ .filter }}">
         {{ .name }}
       </button>
       {{ end }}
     </div>
+    <!-- style="height:40px; width:85px; font-size: 10px;" -->
   </div>
   <div class="container filtr-projects">
     <div class="row" id="project-card-holder">
